--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
     "redis": "^4.6.11"
   }
 }
